# anomalous_subgroup_detection

./: .gitignore  LICENSE  pyproject.toml
examples/: simple_anomaly_detection.py
src/anomalous_subgroup_detection/: __init__.py
